Body segmentation/cropping tool

--- a/assets/imgui.ini
+++ b/assets/imgui.ini
@@ -8,3 +8,58 @@ Pos=8,25
 Size=320,50
 Collapsed=0
 
+[Head]
+Pos=952,25
+Size=320,88
+Collapsed=0
+
+[Trunk]
+Pos=952,121
+Size=320,88
+Collapsed=0
+
+[Left-up arm]
+Pos=952,217
+Size=320,88
+Collapsed=0
+
+[Right-up arm]
+Pos=952,313
+Size=320,88
+Collapsed=0
+
+[Left-down arm]
+Pos=952,409
+Size=320,88
+Collapsed=0
+
+[Right-down arm]
+Pos=952,505
+Size=320,88
+Collapsed=0
+
+[Left-up leg]
+Pos=952,601
+Size=320,88
+Collapsed=0
+
+[Right-up leg]
+Pos=952,697
+Size=320,88
+Collapsed=0
+
+[Left-down leg]
+Pos=952,793
+Size=320,88
+Collapsed=0
+
+[Right-down leg]
+Pos=952,889
+Size=320,88
+Collapsed=0
+
+[Crop]
+Pos=952,25
+Size=320,806
+Collapsed=0
+
