--- a/proj/cmake/CMakeLists.txt
+++ b/proj/cmake/CMakeLists.txt
@@ -38,6 +38,7 @@ set(CINDER_IMGUI_SOURCES
 set(PROJECT_SOURCES
   ${PROJECT_DIR}/src/AICPHelperApp.cpp
   ${PROJECT_DIR}/src/AppGui.cpp
+  ${PROJECT_DIR}/src/Cloud.cpp
   ${CINDER_IMGUI_SOURCES}
 )
 
