Add Simple AICP implementation

--- a/assets/imgui.ini
+++ b/assets/imgui.ini
@@ -4,7 +4,7 @@ Size=320,31
 Collapsed=0
 
 [Information]
-Pos=8,25
+Pos=8,381
 Size=320,50
 Collapsed=0
 
@@ -60,6 +60,16 @@ Collapsed=0
 
 [Crop]
 Pos=952,25
-Size=320,806
+Size=320,825
+Collapsed=0
+
+[Clouds]
+Pos=8,25
+Size=320,237
+Collapsed=0
+
+[Transformation]
+Pos=8,270
+Size=320,103
 Collapsed=0
 
